--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,8 +40,12 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt 
 
-      - name: Run create_map.py
-        run: python create_map.py
+      - name: Check GDAL/Fiona supported drivers
+        run: |
+          python -c "import fiona; print(fiona.supported_drivers)"
+
+      #- name: Run create_map.py
+      #  run: python create_map.py
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
