--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,6 +37,11 @@ jobs:
         with:
           python-version: "3.x" 
 
+      - name: Install libkml
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libkml-dev
+        
       - name: Install dependencies
         run: pip install -r requirements.txt 
 
