--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,12 @@ folium==0.15.1
 geopandas==0.14.1
 idna==3.6
 Jinja2==3.1.2
+lxml==4.9.4
 MarkupSafe==2.1.3
 numpy==1.26.2
 packaging==23.2
 pandas==2.1.4
+pykml==0.2.0
 pyproj==3.6.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
