--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Install libkml
         run: |
           sudo apt-get update
-          sudo apt-get install -y libkml-dev gdal-bin python3-gdal
+          sudo apt-get install -y libkml gdal-bin python3-gdal
         
       - name: Install GDAL
         run: pip install GDAL
