--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -9,8 +9,8 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   schedule:
-    # Запускает работу каждый день в полночь UTC
-    - cron: '0 7 * * *'
+    # Every 4 hours
+    - cron: '0 */4 * * *'
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
